--- a/components/Container/Container.module.scss
+++ b/components/Container/Container.module.scss
@@ -17,6 +17,6 @@
         max-width: 1275px;
         display: flex;
         flex-direction: column;
-        gap: 75px;
+        row-gap: 75px;
     }
 }
