--- a/components/PageSection/PageSection.module.scss
+++ b/components/PageSection/PageSection.module.scss
@@ -18,9 +18,9 @@
     }
 
     @include respond-to(small) {
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 50px;
         .media {
             display: grid;
             grid-template-columns: 1fr;
